[package]
name = "surf_getting_started"
version = "0.1.0"
authors = ["masakiinoue <masaki.yagui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.2.0"
serde = { version = "1.0.125", features = ["derive"] }
async-std = { version = "1.5.0", features = ["attributes"] }
